--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,7 +40,7 @@ jobs:
     - name: Adding to repo
       run: |
         git add ./dist
-        git config --local user.name ${{ github.event.pusher.name }}
-        git config --local user.email ${{ github.event.pusher.email }}
-        git commit -m "[Github Action] Compiling commit: \"${{ github.event.head_commit.message }}\""
+        git config --local user.name '${{ github.event.pusher.name }}'
+        git config --local user.email '${{ github.event.pusher.email }}'
+        git commit -m '[Github Action] Compiling commit: \"${{ github.event.head_commit.message }}\"'
         git push origin HEAD:master
